--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Jun 17 17:46:25 ART 2025
-sdk.dir=C\:\\Users\\jusag\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:/Users/jusag/AppData/Local/Android/Sdk
