Last Update IA Check
Last Update IA Check

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 17 17:46:25 ART 2025
-sdk.dir=C:/Users/jusag/AppData/Local/Android/Sdk
+#Sun Feb 22 22:12:24 ART 2026
+sdk.dir=C\:\\Users\\LaC_i7\\AppData\\Local\\Android\\Sdk
